fixed Bug #2985  "Table truncated when creating another table name with Spaces" added to check_db_name, check_table_name and check_column_name test for end space